--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/node": "^20",
