--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "js-cookie": "^3.0.5",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
@@ -20,6 +21,7 @@
     "sharp": "^0.33.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
