--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# NEXT_PUBLIC_SERVER_BASE_URL=https://techconnect-community-server.onrender.com
-NEXT_PUBLIC_SERVER_BASE_URL=http://localhost:5000
+# NEXT_PUBLIC_SERVER_BASE_URL=https://techconnect-community-server.onrender.com/api/v1
+NEXT_PUBLIC_SERVER_BASE_URL=http://localhost:5000/api/v1
