--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sharp": "^0.33.2"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
