--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "next": "14.1.3",
     "react": "^18",
@@ -19,7 +20,8 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-spinners": "^0.13.8",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
