--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "caniuse-lite": "^1.0.30001675",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "next": "14.1.3",
