--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.1",
     "caniuse-lite": "^1.0.30001675",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.455.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
@@ -22,7 +26,8 @@
     "react-redux": "^9.1.0",
     "react-spinners": "^0.13.8",
     "sharp": "^0.33.2",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
